fixed background on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,6 +10,7 @@
       z-index: -1;
       background-repeat: no-repeat !important;
       background-size: cover !important;
+      background-position: center !important;
    }
 }
 
